--- a/less/navigation.less
+++ b/less/navigation.less
@@ -38,11 +38,19 @@ nav {
 .navver {
     display: flex;
     justify-content: center;
-    
+   
+    // stretch below
+    overflow: hidden;
+    background-color: @ebony-clay;
+    position: fixed;
+    top: 0;
+    left: 0px;
+    width: 100%;
+    // stretch above
     .a-tag {
         font-size: 1.6rem;
         text-decoration: none;
-        color: @ebony-clay;
+        color: @porcelain;
         margin: 1rem;
     }
 }
